# SETestKCL

./: CMakeLists.txt  README.md  SETestKCLConfig.h.in
doc/: Doxyfile
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  NegotiationData.h  Negotiator.cpp  Negotiator.h  Queue.h
src/GUI/: CMakeLists.txt  SETestKCL_GUI.cpp  SETestKCL_GUI.h  SETestKCL_GUI.ui  main.cpp
src/GUI/res/: res.qrc
src/TextualUI/: CMakeLists.txt  DisplayManager.cpp  DisplayManager.h  main.cpp
